# skill_based_assistant

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  agent.py  config.json  config.py  mcp_servers.py  memory.py  messaging.py  pyproject.toml  run.py  server.py  skill_loader.py  user.py  user_context.py
.github/: docker-build.yml
docs/superpowers/plans/: 2026-04-04-centralized-user-context.md
docs/superpowers/specs/: 2026-04-04-centralized-user-context-design.md
scripts/: get_google_token.py  send_capture.py  send_command.py
skills/: __init__.py
skills/calendar/: SKILL.md  events.py
skills/email/: SKILL.md
skills/filesystem/: SKILL.md  files.py
skills/notes/: SKILL.md  obsidian.py
skills/process_email/: SKILL.md  agentmail.py
skills/send_email/: SKILL.md  __init__.py
skills/slack/: SKILL.md  __init__.py
skills/tasks/: SKILL.md
skills/telegram/: SKILL.md  __init__.py
skills/trello/: SKILL.md  trello.py
skills/trips/: SKILL.md  vault.py
tests/: test_command_mode.py  test_messaging.py  test_routing.py  test_skills.py  test_slack_webhook.py  test_trello.py  test_user_context.py  test_users.py
